# atul

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.py  llm_vs_greedy.ipynb  opponent_mentions.py  rationale_top_words.txt
scripts/: arena_driver.py  llm_vs_llm.py  llm_vs_mcts.py
src/azul_agents/: README.md  __init__.py  agents.py  agents_evaluation.py  llm_agent.py
src/azul_engine/: README.md  __init__.py  actions.py  agents.py  agents_evaluation.py  analysis.py  enums.py  llm_agent.py  player.py  serialization.py  simulation.py  state.py  visualize.py
src/azul_engine/nn/: __init__.py  alphazero.py  features.py  mcts.py  model.py
src/azul_nn/: README.md  __init__.py  alphazero.py  features.py  mcts.py  model.py  train.py
src/evals/: README.md  __init__.py  arena.py  llm_vs_llm.py  llm_vs_mcts.py  utils.py
tests/: test_agents.py  test_engine.py  test_llm_agent.py  test_rules.py  test_serialization.py  test_simulation.py
