[project]
name = "azul-engine"
version = "0.1.0"
description = "Simple Azul rules engine scaffold for oversight experiments"
readme = "README.md"
authors = [
    { name = "harshilkamdar", email = "harshilkamdar@ymail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib",
    "tomli_w",
    "torch>=2.2",
]

[build-system]
requires = [
    "uv_build>=0.8.9,<0.9.0",
]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
